--- a/contacts.html
+++ b/contacts.html
@@ -29,7 +29,7 @@
                     </p>
                         <button class="button">
                             <p>
-                               <a class="link-text" class="link" href="https://t.me/Ghpsdv">Мій тг</a>
+                               <a class="link-text" class="link" href="https://t.me/ghpsdvadmin">Мій тг</a>
                             </p>  
                         </button>
                         <br>
