--- a/information.html
+++ b/information.html
@@ -32,8 +32,8 @@
                                 </b>
                             </p>
                                     Насправді все дуже легко. 
-                                        Мені набрид старий дизайн сайту, та й багів нам було не мало. 
-                                        <p> А якщо ти хочеш мені задати питання, то переходь на сторінку контакти. </p>
+                                        Мені набрид старий дизайн сайту, та й багів там було не мало. 
+                                        <p> А якщо ти хочеш мені задати питання, то переходь на сторінку "контакти". </p>
                             <p>
                                 <br>
                                 <br>
